--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     
 }
 
+header nav li{
+    list-style: none;
+}
+
 a{
     text-decoration: none;
     color: black;
@@ -9,8 +13,14 @@ a{
 
 #LOGO{
     font-size: 25px;
+    text-decoration: none;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+img{
+    width: 100%;
+}
 ul li{
     list-style: none;
 }
