--- a/css/style.css
+++ b/css/style.css
@@ -18,15 +18,24 @@ a{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.img{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 img{
     width: 100%;
+    margin: 10%;
+    padding: 20%;
 }
 
 #medlemsknapp{
     background-color: rgb(210, 186, 142);
     list-style: none;
     text-align: center;
-    padding: 5%;
+    padding: 50px;
+    margin: 50px;
 }
 
 main li a{
