--- a/css/style.css
+++ b/css/style.css
@@ -34,18 +34,6 @@ img{
     padding: 20%;
 }
 
-.produktimg{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: right;
-    
-}
-
-#produktimg{
-    width: 15%;
-    display: flex;
-}
-
 .knapp{
     background-color: aqua;
     display: inline-block;
@@ -60,25 +48,6 @@ a:hover{
 
 .knapp:hover{
     background-color: blueviolet;
-}
-
-.størrelser{
-    background-color: blue;
-    display: inline-block;
-    padding: 0.5rem;
-    margin: 0.5rem;
-}
-
-.størrelser:hover{
-    background-color: aquamarine;
-}
-
-#kjøpeknapp{
-    background-color: brown;
-    display: inline;
-    padding: 1rem;
-    margin: 0.5rem;
-    
 }
 
 #medlemsknapp{
@@ -110,5 +79,72 @@ footer section nav ul li a{
     display: flex;
 }
 
+footer section nav ul li{
+    text-align: center;
+}
+
+#sosialemedier{
+    text-align: center;
+}
+
+
 /*produktside*/
+
+main nav ul li{
+    font-size:3px;
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline;
+}
+
+.størrelser{
+    background-color: blue;
+    display: inline-block;
+    padding: 0.5rem;
+    margin: 0.5rem;
+}
+
+.størrelser:hover{
+    background-color: aquamarine;
+}
+
+#kjøpeknapp{
+    background-color: brown;
+    display: inline;
+    padding: 1rem;
+    margin: 0.5rem;
+
+}
+
+
+.produktimg{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: right;
+    
+}
+
+#produktimg{
+    width: 15%;
+    display: flex;
+}
+
+h6{
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+main section p{
+    font-family: Arial, Helvetica, sans-serif;
+}
 /*kjøpsrett*/
+
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h3{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+main section article p{
+    font-family: Arial, Helvetica, sans-serif;
+}
