--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,32 @@
 
 /*forside*/
 
+#grid-container{
+    display: grid;
+    grid-template-areas: "header" "main" "footer";
+}
+
+header, main, footer{
+    padding: 1rem;
+}
+
+header{
+    font-size: 1.5rem;
+    font-weight: 600;
+    grid-area: header;
+}
+
+header nav div{
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    text-align: left;
+}
+
+.navbar{
+    display: none;
+}
+
 header nav li{
     list-style: none;
     float: left;
@@ -84,7 +110,21 @@ footer section nav ul li{
 }
 
 #sosialemedier{
+    background-color: rgb(84, 114, 114);
     text-align: center;
+    display: inline-block;
+    padding: 0.5rem;
+    margin: rem;
+    font-size: 1rem;
+}
+
+.ikoner{
+    background-color: blueviolet;
+    font-size: 2rem;
+    text-align: center;
+    display: inline-block;
+    padding: 0.5rem;
+    margin: 1.5rem;
 }
 
 
@@ -94,6 +134,37 @@ main nav ul li{
     font-size:3px;
     font-family: Arial, Helvetica, sans-serif;
     display: inline;
+}
+
+
+#blå-sko{
+    background-color: rgb(40, 167, 218);
+    display: inline;
+    padding: 0.5rem;
+}
+
+#blå-sko:hover{
+    background-color: rgb(188, 185, 185);
+}
+
+#rød-sko{
+    background-color: rgb(219, 86, 86);
+    display: inline;
+    padding: 0.5rem;
+}
+
+#rød-sko:hover{
+    background-color: rgb(188, 185, 185);
+}
+
+#grønn-sko{
+    background-color: rgb(69, 198, 69);
+    display: inline;
+    padding: 0.5rem;
+}
+
+#grønn-sko:hover{
+    background-color: rgb(188, 185, 185);
 }
 
 .størrelser{
@@ -109,7 +180,7 @@ main nav ul li{
 
 #kjøpeknapp{
     background-color: brown;
-    display: inline;
+    display: inline-block;
     padding: 1rem;
     margin: 0.5rem;
 
