--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 *{
-    
+    box-sizing: border-box;
 }
 
 /*forside*/
 
-#grid-container{
+#grid-container-index{
     display: grid;
     grid-template-areas: "header" "main" "footer";
 }
@@ -21,9 +21,13 @@ header{
 
 header nav div{
     display: flex;
+    flex-direction: row;
+    margin: auto auto auto 2rem;
+    padding: 1rem;
+
     justify-content: space-between;
     position: absolute;
-    text-align: left;
+    text-align: center;
 }
 
 .navbar{
@@ -32,8 +36,9 @@ header nav div{
 
 header nav li{
     list-style: none;
-    float: left;
-
+    display: flex;
+    position: absolute;
+    justify-content: space-between;
 }
 
 a{
@@ -65,7 +70,7 @@ img{
     display: inline-block;
     padding: 1rem;
     margin: 0.5rem;
-    text-align: left;
+    text-align:;
 }
 
 a:hover{
@@ -73,6 +78,20 @@ a:hover{
 }
 
 .knapp:hover{
+    background-color: blueviolet;
+}
+
+.skotype{
+    background-color: aqua;
+    display: inline-block;
+    padding: 1rem;
+    margin: 0.5rem;
+    text-align:;
+}
+
+
+
+.skotype:hover{
     background-color: blueviolet;
 }
 
@@ -97,16 +116,9 @@ footer{
     background-color: black;
     color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
-    display: flex;
 }
 
-#kundeservice{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
 
-}
 
 footer section nav ul li a{
     color: rgb(255, 255, 255);
@@ -117,7 +129,6 @@ footer section nav ul li a{
 
 footer section nav ul li{
     text-align: center;
-   
 }
 
 #sosialemedier{
@@ -131,7 +142,7 @@ footer section nav ul li{
 
 .ikoner{
     background-color: blueviolet;
-    font-size: 2rem;
+    font-size: 50%;
     text-align: center;
     display: inline-block;
     padding: 0.5rem;
@@ -141,8 +152,9 @@ footer section nav ul li{
 
 /*produktside*/
 
+
 main nav ul li{
-    font-size:3px;
+    font-size: 5px;;
     font-family: Arial, Helvetica, sans-serif;
     display: inline;
 }
@@ -230,4 +242,48 @@ h3{
 
 main section article p{
     font-family: Arial, Helvetica, sans-serif;
+}
+
+@media only screen and (min-width:600px){
+    #grid-container{
+        grid-template-areas: "header header header" "main main main" "footer footer footer";
+        grid-template-columns: 1fr 1fr, 1fr;
+    }
+
+    header{
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start:1;
+        grid-row-end:2;
+    }
+
+    footer{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 3;
+    }
+
+    .navbar{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 1rem;
+        list-style: none;
+        margin: 0;
+    }
+
+    #ham{
+        display: none;
+    }
+
+    .skotype{
+        display: grid;
+        flex-direction: row;
+    }
+
+    footer{
+        display: grid;
+        flex-direction: row;
+    }
 }
