--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header, main, footer{
 header{
     font-size: 1.5rem;
     font-weight: 600;
+    background-color: rgb(240, 234, 227);
    
 }
 
@@ -39,17 +40,15 @@ header nav li{
     justify-content: space-between;
 }
 
-a{
-    text-decoration: none;
-    color: rgb(86, 84, 84);
-}
-
 #LOGO{
     font-size: 25px;
     text-decoration: none;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
+}
+
+body{
+    background-color: rgb(240, 234, 227);
 }
 
 .img{
@@ -66,6 +65,9 @@ img{
 
 .knapp{
     background-color: rgb(68, 198, 198);
+    color: black;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     display: inline-block;
     flex-direction: row;
@@ -82,6 +84,9 @@ img{
 
 .skotype{
     background-color: aqua;
+    color: black;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
     display: inline-block;
     padding: 1rem;
     margin: 0.5rem;
@@ -100,25 +105,19 @@ img{
     margin: 50px;
 }
 
-main li a{
-    font-size: 40px;
-}
-
-ul li{
-    list-style: none;
-}
-
 footer{
     color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
+    width: 100%;
 }
 
-footer section nav ul li a{
-    color: rgb(255, 255, 255);
+footer ul li a{
+    color: rgb(234, 224, 224);
     background-color: black;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;  
+    text-decoration: none;
 }
 
 footer section nav ul li{
@@ -145,18 +144,19 @@ footer section nav ul li{
 
 /*produktside*/
 
-main nav ul li{
-    font-size: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    display: inline;
-}
-
 .brodsti{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1px;
-    display:;
+    display: flex; 
+    color: black;
+    text-decoration: none;
 }
 
+ul li{
+    list-style: none;
+    text-decoration: none;
+    color: black;
+    display: flex;
+}
 
 #blå-sko{
     background-color: rgb(40, 167, 218);
@@ -201,10 +201,12 @@ main nav ul li{
 
 #kjøpeknapp{
     background-color: brown;
+    color: black;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
     display: inline-block;
     padding: 1rem;
     margin: 0.5rem;
-
 }
 
 
@@ -212,12 +214,12 @@ main nav ul li{
     display: flex;
     flex-wrap: wrap;
     justify-content: right;
-    
 }
 
 #produktimg{
     width: 15%;
     display: flex;
+ 
 }
 
 h6{
@@ -256,17 +258,47 @@ main section article p{
         grid-column-end: 5;
     }
 
+    #grid-container-produkt main{
+        grid-column-start: 1;
+        grid-column-end: 5;
+    }
+
+    #grid-container-produkt{
+        display: grid;
+        grid-template-areas: "left center right";
+    }
+
+    .produktimg{
+        display: grid;
+        grid-area: right;
+        order: 1;
+        padding: 0;
+        margin: 0;
+    }
+
+    #grid-container-kjopsrett{
+        display: grid;
+        grid-template-areas: "left center right";
+    }
+
+    #grid-container-kjopsrett main{
+        grid-column-start: 1;
+        grid-column-end: 5;
+    }
+
     #ham{
         display: none;
     }
 
-    #footer-footer{
-        display: grid;
-        grid-template-areas: "left center right";
-        grid-area: footer;
+    .navbar{
+        display: flex;
+        flex-direction: row;
+        gap: 0.5rem;
+        list-style: none;
+        padding: 
     }
 
-    .kontakt-oss{
+    #footer{
         display: grid;
         grid-template-areas: "left center right";
         grid-area: footer;
@@ -285,10 +317,6 @@ main section article p{
     }
 
     footer{
-        width: 150%;
+        width: 100%;
     }
-
-    
-
-
 }
