--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,8 @@ body{
     background-color: rgb(240, 234, 227);
 }
 
+
+
 .img{
     display: flex;
     flex-wrap: wrap;
@@ -59,8 +61,6 @@ body{
 
 img{
     width: 100%;
-    margin: 10%;
-    padding: 20%;
 }
 
 .knapp{
@@ -145,10 +145,9 @@ footer section nav ul li{
 /*produktside*/
 
 .brodsti{
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex; 
-    color: black;
-    text-decoration: none;
+   
+    display: none; 
+    
 }
 
 ul li{
@@ -246,7 +245,7 @@ main section article p{
 
 /*responsivt*/
 
-@media only screen and (min-width:600px){
+@media only screen and (min-width:500px){
    
     #grid-container-index, #grid-container-produkt, #grid-container-kjopsrett{
         grid-template-areas: "header header header" "main main main" "footer footer footer";
@@ -258,6 +257,11 @@ main section article p{
         grid-column-end: 5;
     }
 
+    #grid-container-index{
+        display: grid;
+        grid-template-areas: "left center right";
+    }
+
     #grid-container-produkt main{
         grid-column-start: 1;
         grid-column-end: 5;
@@ -266,6 +270,35 @@ main section article p{
     #grid-container-produkt{
         display: grid;
         grid-template-areas: "left center right";
+        grid-area: main;
+    }
+
+    .produktimg{
+        display:grid;
+        grid-area: right;
+        width: 50%
+    }
+
+    #produktimg{
+        display: flex;
+        gap: 0.5rem;
+        margin: 0.5rem;
+        padding: 0.5rem;
+        width: 300px;
+    }
+
+    #rød-sko, #blå-sko, #grønn-sko{
+        display: grid;
+        display: inline;
+        grid-area: right;
+        
+    }
+
+    .brodsti{
+        font-family: Arial, Helvetica, sans-serif;
+        display: flex; 
+        color: black;
+        text-decoration: none;
     }
 
     .produktimg{
