--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,7 @@ header, main, footer{
 header{
     font-size: 1.5rem;
     font-weight: 600;
-    background-color: rgb(240, 234, 227);
-   
+    background-color: rgb(240, 234, 227)
 }
 
 header nav div{
@@ -31,6 +30,10 @@ header nav div{
 
 .navbar{
     display: none;
+}
+
+.flex-container-logo{
+    background-color: rgb(133, 99, 48);
 }
 
 header nav li{
@@ -50,8 +53,6 @@ header nav li{
 body{
     background-color: rgb(240, 234, 227);
 }
-
-
 
 .img{
     display: flex;
@@ -157,33 +158,33 @@ ul li{
     display: flex;
 }
 
-#blå-sko{
+#blue-sko{
     background-color: rgb(40, 167, 218);
     display: inline;
     padding: 0.5rem;
 }
 
-#blå-sko:hover{
+#blue-sko:hover{
     background-color: rgb(188, 185, 185);
 }
 
-#rød-sko{
+#red-sko{
     background-color: rgb(219, 86, 86);
     display: inline;
     padding: 0.5rem;
 }
 
-#rød-sko:hover{
+#red-sko:hover{
     background-color: rgb(188, 185, 185);
 }
 
-#grønn-sko{
+#gren-sko{
     background-color: rgb(69, 198, 69);
     display: inline;
     padding: 0.5rem;
 }
 
-#grønn-sko:hover{
+#gren-sko:hover{
     background-color: rgb(188, 185, 185);
 }
 
@@ -198,7 +199,7 @@ ul li{
     background-color: aquamarine;
 }
 
-#kjøpeknapp{
+#kjopeknapp{
     background-color: brown;
     color: black;
     text-decoration: none;
@@ -263,14 +264,38 @@ main section article p{
     }
 
     #grid-container-produkt main{
+        display: grid;
+       
         grid-column-start: 1;
         grid-column-end: 5;
+
     }
 
     #grid-container-produkt{
         display: grid;
-        grid-template-areas: "left center right";
-        grid-area: main;
+        grid-template-areas: "bilde bilde navn" "bilde bilde pris" "bilde bilde farger" "bilde bilde sizes" "bilde bilde kjopsknapp" ". produkt ." "beskrivelse beskrivelse beskrivelse";
+        grid-area: body;
+    }
+
+    #grid-container-produkt .produktimg{
+        display: grid;
+        grid-area: bilde;
+    }
+
+    #skonavn{
+        grid-area: navn;
+    }
+
+    #produktbeskrivelse{
+        grid-area: produkt;
+    }
+
+    #produkt{
+        grid-area: beskrivelse;
+    }
+    
+    .produktimg img{
+        display: grid;
     }
 
     .produktimg{
